<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.sebastian.ardurobot.controller.AutonomicActivity"
                android:background="#fffc970b">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/timeEditText"
        android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/secondsTextView" android:maxLength="4"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="s"
        android:id="@+id/secondsTextView"
        android:layout_alignBottom="@+id/timeEditText" android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" android:textSize="25sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startButton"
        android:layout_marginTop="47dp"
        android:text="@string/start"
        android:layout_below="@+id/cleanToggleButton" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>
    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:max="100"
        android:layout_marginTop="30dp" android:layout_below="@+id/remainTextView"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/timeEditText" android:layout_alignEnd="@+id/timeEditText"
        android:indeterminate="false"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:id="@+id/stopButton" android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
        android:layout_alignParentRight="true" android:layout_alignParentEnd="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/remainTextView"
        android:layout_marginTop="80dp"
        android:text="@string/remain" android:textSize="20sp"
        android:layout_below="@+id/startButton" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remain_value"
        android:id="@+id/remainValueTextView"
        android:textSize="20sp"
        android:layout_alignTop="@+id/remainTextView" android:layout_centerHorizontal="true"/>
    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clean_button"
        android:id="@+id/cleanToggleButton" android:layout_below="@+id/timeEditText"
        android:layout_marginTop="22dp" android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" android:layout_toRightOf="@+id/remainValueTextView"
        android:layout_toEndOf="@+id/remainValueTextView"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clean_mode"
        android:id="@+id/cleanModeTextView"
        android:textSize="20sp"
        android:layout_alignTop="@+id/cleanToggleButton" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
</RelativeLayout>
